--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
 
-<meta name="description" content="ページの説明文">
-<meta property="og:title" content="ページのタイトル">
-<meta property="og:description" content="ページの説明文">
+<meta name="description" content="WSsystemの採用情報ページです">
+<meta property="og:title" content="WSsystem">
+<meta property="og:description" content="WSsystemの採用情報ページです">
 <meta property="og:image" content="images/hero.jpg">
 <meta property="og:locale" content="ja_JP">
 <meta property="og:type" content="website">
 <meta name="twitter:card" content="summary_large_image">
-<meta property="og:url" content="https://mywebsite.com/page">
-<link rel="canonical" href="https://mywebsite.com/page">
+<meta property="og:url" content="https://show-1018.github.io/lp_employment/">
+<link rel="canonical" href="https://show-1018.github.io/lp_employment/">
 
 </head>
 
