--- a/index.html
+++ b/index.html
@@ -11,19 +11,21 @@
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
 
-<meta name="description" content="WSsystemの採用情報ページです">
-<meta property="og:title" content="WSsystem">
-<meta property="og:description" content="WSsystemの採用情報ページです">
+<meta name="description" content="ページの説明文">
+<meta property="og:title" content="ページのタイトル">
+<meta property="og:description" content="ページの説明文">
 <meta property="og:image" content="images/hero.jpg">
 <meta property="og:locale" content="ja_JP">
 <meta property="og:type" content="website">
 <meta name="twitter:card" content="summary_large_image">
-<meta property="og:url" content="https://show-1018.github.io/lp_employment/">
-<link rel="canonical" href="https://show-1018.github.io/lp_employment/">
+<meta property="og:url" content="https://mywebsite.com/page">
+<link rel="canonical" href="https://mywebsite.com/page">
 
 </head>
 
 <body>
+
+<div class="wrapper">
 
 <header>
     <div class="hero">
@@ -32,8 +34,6 @@
     <h2>1ヶ月のエンジニア研修で あなたもプロを目指しませんか</h2>
     </div>
 </header>
-
-<div class="wrapper">
 
 <section class="program">
     <h2>プログラミングをマスターできる1ヶ月の研修プログラム</h2>
@@ -70,9 +70,14 @@
 <section class="course">
     <h2>選べる3つのコース</h2>
     <ul>
-        <li><div class="course-button"><a href="#"><img src="images/a_engineer.jpg" alt="アプリエンジニア"><span>アプリエンジニア</span></a></div></li>
-        <li><div class="course-button"><a href="#"><img src="images/web.jpg" alt="Webエンジニア"><span>Webエンジニア</span></a></div></li>
-        <li><div class="course-button"><a href="#"><img src="images/server.jpg" alt="サーバーエンジニア"><span>サーバーエンジニア</span></a></div></li>
+        <li>
+            <div class="course-button">
+                <a href="#"><img src="images/a_engineer.jpg" alt="アプリエンジニア"><span>アプリエンジニア</span>
+                <p>詳しくはこちら</p></a>
+            </div>
+        </li>
+        <li><div class="course-button"><a href="#"><img src="images/web.jpg" alt="Webエンジニア"><p>Webエンジニア</p></a></div></li>
+        <li><div class="course-button"><a href="#"><img src="images/server.jpg" alt="サーバーエンジニア"><p>サーバーエンジニア</p></a></div></li>
     </ul>
 </section>
 
