--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
     <h2>プロジェクトの流れ</h2>
     <ul>
         <li><img src="images/entry.png" alt="申し込み"><p>申し込み</p></li>
-        <li><img src="images/arrow_right.png" alt="矢印"></li>
+        <li class="arrow"><img src="images/arrow_right.png" alt="矢印"></li>
         <li><img src="images/interview.png" alt="面接"><p>面接</p></li>
-        <li><img src="images/arrow_right.png" alt="矢印"></li>
+        <li class="arrow"><img src="images/arrow_right.png" alt="矢印"></li>
         <li><img src="images/lecture.png" alt="研修受講"><p>研修受講</p></li>
-        <li><img src="images/arrow_right.png" alt="矢印"></li>
+        <li class="arrow"><img src="images/arrow_right.png" alt="矢印"></li>
         <li><img src="images/deview.png" alt="エンジニアデビュー"><p>エンジニアデビュー</p></li>
     </ul>
 </section>
