--- a/index.html
+++ b/index.html
@@ -71,13 +71,23 @@
     <h2>選べる3つのコース</h2>
     <ul>
         <li>
-            <div class="course-button">
-                <a href="#"><img src="images/a_engineer.jpg" alt="アプリエンジニア"><span>アプリエンジニア</span>
-                <p>詳しくはこちら</p></a>
-            </div>
+            <a href="#"><div class="course-button">
+                <span>アプリエンジニア</span>
+                <p>詳しくはこちら</p>
+            </div></a>
         </li>
-        <li><div class="course-button"><a href="#"><img src="images/web.jpg" alt="Webエンジニア"><p>Webエンジニア</p></a></div></li>
-        <li><div class="course-button"><a href="#"><img src="images/server.jpg" alt="サーバーエンジニア"><p>サーバーエンジニア</p></a></div></li>
+        <li>
+            <a href="#"><div class="course-button">
+                <span>Webエンジニア</span>
+                <p>詳しくはこちら</p>
+            </div></a>
+        </li>
+        <li>
+            <a href="#"><div class="course-button">
+                <span>サーバーエンジニア</span>
+                <p>詳しくはこちら</p>
+            </div></a>
+        </li>
     </ul>
 </section>
 
