wrapper、courseクラスにsp用の幅を追加

--- a/index.html
+++ b/index.html
@@ -82,21 +82,21 @@
                 <li>
                     <a href="#">
                         <div class="course-button">
-                            <img src="./images/app.png" alt="アプリエンジニア">
+                            <img src="./images/app.png" class="course-button__img" alt="アプリエンジニア">
                         </div>
                     </a>
                 </li>
                 <li>
                     <a href="#">
                         <div class="course-button">
-                            <img src="./images/web.png" alt="Webエンジニア">
+                            <img src="./images/web.png" class="course-button__img" alt="Webエンジニア">
                         </div>
                     </a>
                 </li>
                 <li>
                     <a href="#">
                         <div class="course-button">
-                            <img src="./images/server.png" alt="サーバーエンジニア">
+                            <img src="./images/server.png" class="course-button__img" alt="サーバーエンジニア">
                         </div>
                     </a>
                 </li>
